--- a/ScenekitStarter/LightingModelWindow.xib
+++ b/ScenekitStarter/LightingModelWindow.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6205" systemVersion="14A314h" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment defaultVersion="101000" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6205"/>
     </dependencies>
     <objects>
@@ -57,7 +58,7 @@
                                 <font key="font" metaFont="menu"/>
                                 <menu key="menu" id="UlQ-XP-3CW">
                                     <items>
-                                        <menuItem title="Phong Point Light" id="dF8-Ai-y7P"/>
+                                        <menuItem title="Phong Point Light" state="on" id="dF8-Ai-y7P"/>
                                         <menuItem title="Blinn" id="iCM-jc-oNK"/>
                                         <menuItem title="Edge Fuzz" id="uez-MC-ZVr"/>
                                         <menuItem title="Gooch" id="qPy-6U-M8Z"/>
